# stage_robot_vacuum

./: README.md
stage_robot_vacuum/: CMakeLists.txt  package.xml
stage_robot_vacuum/launch/: run_task.launch
stage_robot_vacuum/scripts/: stage_manager_node.py
stage_robot_vacuum/src/: control_robot_node.cpp
stage_robot_vacuum/world/: map.world
