<?xml version="1.0"?>
<package format="2">
  <name>stage_robot_vacuum</name>
  <version>1.0.0</version>
  <description>
      This package is a base for developing robot application using the STAGE robot simulator.
      This package is developed for the purpose of studying ROS in university lectures.
  </description>

  <maintainer email="yuu@isc.chubu.ac.jp">Yuji Yamauchi</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/yuu31/stage_robot_vacuum</url>
  <url type="website">https://robot.isc.chubu.ac.jp/?p=1469</url>
  <author email="yuu@isc.chubu.ac.jp">Yuji Yamauchi</author>
  <author email="tr20012-5568@sti.chubu.ac.jp">Kentaro Miwa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roscpp_serialization</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
